--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.2.15
 django-ckeditor==6.5.0
 django-js-asset==2.0.0
 gunicorn==20.1.0
+Pillow==9.2.0
 psycopg2==2.9.3
 pytz==2022.2.1
 sqlparse==0.4.2
