--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@ core.Microsoft*
 core.mongo*
 core.python*
 env.py
-blank.py
 __pycache__/
 *.py[cod]
 node_modules/
 .github/
 cloudinary_python.txt
+blank.html
