--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj3-cloudinary-storage==0.0.6
 Django==3.2.15
 django-ckeditor==6.5.0
 django-js-asset==2.0.0
+django-reset-migrations==0.4.0
 gunicorn==20.1.0
 Pillow==9.2.0
 psycopg2==2.9.3
